<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueTransparentOverwatch"
    android:fitsSystemWindows="true"
    android:id="@+id/kaki">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- WARNING : Layouts in a CoordinatorLayout need to define a layout_behavior -->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollViewHeroFilter"
            android:paddingBottom="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strGameMode"
                    android:textSize="30sp"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ViewFlipper
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:id="@+id/viewFlipperAssault">

                        <ImageView
                            android:id="@+id/ivAssaultDisabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_empty"/>

                        <ImageView
                            android:id="@+id/ivAssaultFocused"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_full"/>

                    </ViewFlipper>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewFlipperAssault"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_alignLeft="@id/viewFlipperOffense"
                        android:text="@string/strAssault"/>

                    <ViewFlipper
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/viewFlipperAssault"
                        android:layout_marginRight="10dp"
                        android:id="@+id/viewFlipperControl">

                        <ImageView
                            android:id="@+id/ivControlDisabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_empty"/>

                        <ImageView
                            android:id="@+id/ivControlFocused"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_full"/>

                    </ViewFlipper>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewFlipperControl"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_alignLeft="@id/viewFlipperControl"
                        android:text="@string/strControl"/>

                    <ViewFlipper
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/viewFlipperControl"
                        android:layout_marginRight="10dp"
                        android:id="@+id/viewFlipperEscort">

                        <ImageView
                            android:id="@+id/ivEscortDisabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_empty"/>

                        <ImageView
                            android:id="@+id/ivEscortFocused"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_full"/>

                    </ViewFlipper>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewFlipperEscort"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_alignLeft="@id/viewFlipperEscort"
                        android:text="@string/strEscort"/>

                    <ViewFlipper
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/viewFlipperEscort"
                        android:layout_marginRight="10dp"
                        android:id="@+id/viewFlipperHybrid">

                        <ImageView
                            android:id="@+id/ivHybridDisabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_empty"/>

                        <ImageView
                            android:id="@+id/ivHybridFocused"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/star_full"/>

                    </ViewFlipper>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewFlipperHybrid"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_alignLeft="@id/viewFlipperHybrid"
                        android:text="@string/strHybrid"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="20dp"
                    android:background="@color/greyOverwatch"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/footerMapFilter"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="4dp"
            android:layout_alignParentBottom="true"
            android:background="@color/blueOverwatch">

            <Button
                android:id="@+id/btnMapFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@drawable/filter_button"
                android:layout_centerInParent="true"
                android:text="@string/strFilterMap" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>